базовые стили, хедер

--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/logo.svg" />
+    <title>Приют</title>
+  </head>
+  <body class="container">
+    <header class="main-header container">
+      <div class="header-cont wrap">
+        <div class="header-cont__logo-cont">
+          <img class="header-cont__logo-img" src="src/assets/logo.svg" alt="logo" />
+          <div>
+            <p class="header-cont__logo-name">Милый друг</p>
+            <p>приют для животных</p>
+          </div>
+        </div>
+
+        <nav>
+          <ul class="header-cont__nav">
+            <li><a href="" class="header-cont__nav-link">Наш приют</a></li>
+            <li><a href="" class="header-cont__nav-link header-cont__nav-link--active">Взять питомца</a></li>
+            <li><a href="" class="header-cont__nav-link">Новости</a></li>
+            <li><a href="" class="header-cont__nav-link">Контакты</a></li>
+            <li><a href="" class="header-cont__nav-link header-cont__nav-link--blue">Помочь приюту</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>  </main>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
+
+
+<!--
+  Должно в итоге быть так
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Приют</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+-->
