верстка экрана hero, стили к нему

--- a/index.html
+++ b/index.html
@@ -45,7 +45,21 @@
       </div>
     </header>
     <main>
-      <h1 class="main-title">Все животные привиты, стерильны, чипированы и готовы
+      <section class="hero">
+        <div class=" hero__img-cont hero__img-cont--left">
+          <img  alt="собака" class="hero__img hero__img--dog" src="src/assets/imgs/hero-bg--dog.png">
+        </div>
+        <div class="hero__content">
+            <h1 class="hero__title title">Давайте вместе <br> сделаем жизнь десятков животных <br>лучше и дадим им шанс <br><span class="pink">обрести семью</span></h1>
+            <button class="hero__find-pet-butt blue-butt">Найти питомца</button>
+        </div>
+        <div class=" hero__img-cont hero__img-cont--right">
+          <img  class="hero__img hero__img--cat" src="src/assets/imgs/hero-bg--cat.png" alt="кошка">
+        </div>
+      </section>
+    
+
+      <h1 class="main-title title">Все животные привиты, стерильны, чипированы и готовы
         <span class="pink">обрести семью</span></h1>
 
       <section class="pet-card-section wrap">
