изменил шрифты, стили кнопок

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li
               ><a
                 href=""
-                class="header-cont__nav-link header-cont__nav-link--blue"
+                class="header-cont__nav-link header-cont__nav-link--blue btn--blue btn"
                 >Помочь приюту</a
               ></li
             >
@@ -51,7 +51,7 @@
         </div>
         <div class="hero__content">
             <h1 class="hero__title title">Давайте вместе <br> сделаем жизнь десятков животных <br>лучше и дадим им шанс <br><span class="pink">обрести семью</span></h1>
-            <button class="hero__find-pet-butt blue-butt">Найти питомца</button>
+            <button class="hero__find-pet-butt btn--blue btn">Найти питомца</button>
         </div>
         <div class=" hero__img-cont hero__img-cont--right">
           <img  class="hero__img hero__img--cat" src="src/assets/imgs/hero-bg--cat.png" alt="кошка">
@@ -89,7 +89,7 @@
                 <p class="pet-card__info-value" id="pet-card__age">7 лет</p>
               </li>
             </ul>
-            <button class="pet-card__shelter-button">Приютить</button>
+            <button class="pet-card__shelter-button btn--blue btn">Приютить</button>
           </div>
           <div class="pet-card__gallery">
             <img class="pet-card__main-photo" src="src/assets/imgs/maru.jpg" alt="">
@@ -109,9 +109,9 @@
           <div class="more-info__help">
             <h2 class="more-info__title more-info__help-title">Как помочь?</h2>
             <div class="more-info__buttons-cont">
-              <button class="more-info__button more-info__button--shelter">Приютить</button>
-              <button class="more-info__button more-info__button--donation">Отправить пожертвование</button>
-              <button class="more-info__button more-info__button--share">Поделиться историей питомца</button>
+              <button class="more-info__button more-info__button--shelter btn--white btn">Приютить</button>
+              <button class="more-info__button more-info__button--donation btn--white btn">Отправить пожертвование</button>
+              <button class="more-info__button more-info__button--share btn--white btn">Поделиться историей питомца</button>
             </div>
           </div>
           <div class="more-info__about-pet">
