наш приют+стили

--- a/index.html
+++ b/index.html
@@ -57,6 +57,33 @@
           <img  class="hero__img hero__img--cat" src="src/assets/imgs/hero-bg--cat.png" alt="кошка">
         </div>
       </section>
+
+      <section class="about-shelter wrap">
+        <div class="our-shelter">
+          <header class="our-shelter__header">
+            <img  class="our-shelter__logo-img"
+            src="src/assets/icons/logo.svg"
+            alt="logo">
+            <h2 class="our-shelter__title">Наш приют</h2>
+          </header>
+          <p>Мы помогаем бездомным животным по принципу: «Помогая не навреди!»</p>
+          <p>Дoлгoe вpeмя фонд приют пoлный кoмплeкc ycлyг пo пoдгoтoвкe вpeмeннo бeздoмныx кoшeк и coбaк для пpoживaния в дoмaшниx ycлoвияx: oт лeчeния и cтepилизaции дo кинoлoгичecкoй paбoты пo aдaптaции к нoвым ycлoвиям жизни и в дaльнeйшeм пpиcтpoй.</p>
+        </div>
+        <div class="our-mission">
+          <h2 class="our-mission__title">Наша миссия</h2>
+          <ul class="our-mission__missions-list">
+            <li class="our-mission__mission">
+              <img src="" alt="">
+              <p>Сокращение численности безнадзорных животныхи изменение отношения общества к ним</p>
+            </li>
+            <li  class="our-mission__mission">
+              <img src="" alt="">
+              <p>Популяризация ответственного отношения к домашним животным</p>
+            </li>
+          </ul>
+
+        </div>
+      </section>
     
 
       <h1 class="main-title title">Все животные привиты, стерильны, чипированы и готовы
