карточки как взять питомца + стили

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <img  alt="собака" class="hero__img hero__img--dog" src="src/assets/imgs/hero-bg--dog.png">
         </div>
         <div class="hero__content">
-            <h1 class="hero__title title">Давайте вместе <br> сделаем жизнь десятков животных <br>лучше и дадим им шанс <br><span class="pink">обрести семью</span></h1>
+            <h1 class="hero__title title-h1">Давайте вместе <br> сделаем жизнь десятков животных <br>лучше и дадим им шанс <br><span class="pink">обрести семью</span></h1>
             <button class="hero__find-pet-butt btn--blue btn">Найти питомца</button>
         </div>
         <div class=" hero__img-cont hero__img-cont--right">
@@ -86,7 +86,7 @@
       </section>
     
 
-      <h1 class="main-title title">Все животные привиты, стерильны, чипированы и готовы
+      <h1 class="main-title title-h1">Все животные привиты, стерильны, чипированы и готовы
         <span class="pink">обрести семью</span></h1>
 
       <section class="pet-card-section wrap">
@@ -313,6 +313,26 @@
           </li>
         </ul>
       </section>
+
+      <section class="adopt-steps wrap">
+        <h2 class="adopt-steps__title title-h2">Как <span class="pink">взять питомца</span> из приюта</h2>
+        <ul class="steps">
+          <li class="step step--1">
+            <div class="step-number"></div>
+            <p>Заполнить анкету кандидата усыновителя</p>
+          </li>
+          <li class="step step--2">
+            <div class="step-number"></div>
+            <p>Встретиться с сотрудниками приюта</p>
+          </li>
+          <li class="step step--3">
+            <div class="step-number"></div>
+            <p>Забрать питомца</p>
+          </li>
+        </ul>
+      </section>
+      
+
     </main>
     <footer class="main-footer container">
       <div class="footer-cont wrap">
