--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="container">
     <header class="main-header">
       <div class="header-cont wrap">
-        <a class="header-cont__logo-cont" href="">
+        <a class="header-cont__logo-cont" href="/">
           <img
             class="header-cont__logo-img"
             src="src/assets/icons/logo.svg"
@@ -23,23 +23,17 @@
 
         <nav class="header-cont__nav-cont">
           <ul class="header-cont__nav">
-            <li><a href="" class="header-cont__nav-link">Наш приют</a></li>
-            <li
-              ><a
-                href=""
+            <li><a href="/shelter" class="header-cont__nav-link">Наш приют</a></li>
+            <li><a
+                href="/adopt"
                 class="header-cont__nav-link header-cont__nav-link--active"
-                >Взять питомца</a
-              ></li
-            >
-            <li><a href="" class="header-cont__nav-link">Новости</a></li>
-            <li><a href="" class="header-cont__nav-link">Контакты</a></li>
-            <li
-              ><a
-                href=""
+                >Взять питомца</a></li>
+            <li><a href="/news" class="header-cont__nav-link">Новости</a></li>
+            <li><a href="/contacts" class="header-cont__nav-link">Контакты</a></li>
+            <li><a
+                href="/help"
                 class="header-cont__nav-link header-cont__nav-link--blue btn--blue btn"
-                >Помочь приюту</a
-              ></li
-            >
+                >Помочь приюту</a></li>
           </ul>
         </nav>
       </div>
@@ -316,17 +310,17 @@
 
       <section class="adopt-steps wrap">
         <h2 class="adopt-steps__title title-h2">Как <span class="pink">взять питомца</span> из приюта</h2>
-        <ul class="steps">
-          <li class="step step--1">
-            <div class="step-number"></div>
+        <ul class="adopt-steps__steps">
+          <li class="adopt-steps__step adopt-steps__step--1">
+            <div class="adopt-steps__step-number"></div>
             <p>Заполнить анкету кандидата усыновителя</p>
           </li>
-          <li class="step step--2">
-            <div class="step-number"></div>
+          <li class="adopt-steps__step adopt-steps__step--2">
+            <div class="adopt-steps__step-number"></div>
             <p>Встретиться с сотрудниками приюта</p>
           </li>
-          <li class="step step--3">
-            <div class="step-number"></div>
+          <li class="adopt-steps__step adopt-steps__step--3">
+            <div class="adopt-steps__step-number"></div>
             <p>Забрать питомца</p>
           </li>
         </ul>
