--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Приют</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
+
+<!-- 
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -158,7 +173,7 @@
             <li class="pets-section__type-filter-item" type="button">Кошки</li>
             <li class="pets-section__type-filter-item" type="button">Собаки</li>
           </ul>
-          <!-- <div class="pets-section__filter-button" type="button">Фильтры</div> -->
+          <div class="pets-section__filter-button" type="button">Фильтры</div>           
         </div>
         <ul class="pets-section__pets-list">
           <li class="pets-section__pet-item">
@@ -363,20 +378,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
-<!--
-  Должно в итоге быть так
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Приют</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
--->
+ -->
