--- a/index.html
+++ b/index.html
@@ -1,18 +1,7 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/icons/logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Приют</title>
-  </head>
-  <body class="container">
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+ 
 
-<!-- 
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -54,6 +43,61 @@
       </div>
     </header>
     <main>
+
+		<section class="how-to-adopt wrap">
+			<h1 class="title-h1">Как <span class="pink">взять питомца</span> из приюта?</h1>
+			<ul class="how-to-adopt__list">
+				<li class="how-to-adopt__step">
+					<div class="how-to-adopt__step-card-wrapper">
+						<div class="how-to-adopt__step-card how-to-adopt__step-card--1">
+							<div class="how-to-adopt__step-number"></div>
+							<p>Заполнить анкету кандидата усыновителя</p>
+						</div>
+						<button class="how-to-adopt__questionnaire btn--blue btn">Анкета</button>
+					</div>
+
+					<div class="how-to-adopt__content">
+						<p>Первое, что необходимо – это выяснить, все ли ваши домочадцы готовы принять в семью нового члена. Помните, что животное – не игрушка, или сувенир в подарок. Это новый член семьи, который проживет с вами долгую счастливую жизнь.</p>
+						<p>Приехать в приют, или выбрать питомца в каталоге на сайте приюта это еще не все. Обязательно свяжитесь с администратором приюта, задайте вопросы, выскажите свои пожелания по подбору питомца.</p>
+						<p>У приютов строгие требования к будущим владельцам. Пройдите собеседование и выясните, что требуется от вас, готовы ли вы подойти к усыновлению с полной ответственностью.</p>
+						<p>Заполните анкету кандидата усыновителя. На ее рассмотрение потребуется несколько дней, а для вас это время – еще раз хорошенько все взвесить и подумать.</p>
+					</div>		
+				</li>
+				<li class="how-to-adopt__step">
+					<div class="how-to-adopt__step-card how-to-adopt__step-card--2">
+						<div class="how-to-adopt__step-number"></div>
+						<p>Встретиться с сотрудниками приюта</p>
+					</div>
+					<div class="how-to-adopt__content">
+						<p>После заполнения анкеты потребуется время для решения администрации приюта.</p>
+						<p>Будьте готовы к тому, что к вам придут сотрудники приюта, чтобы убедиться, что животное будет передано в семью, где его ждут, и будут любить со всей ответственностью.</p>
+						<p>Сотрудник приюта выезжает по месту жительства для проверки и подтверждения предоставленной информации в заполненной вами анкете.</p>
+						<p>По любым вопросам насчёт выдвигаемых требований можете обращаться к нам по контактам, указанным на сайте.</p>
+					</div>	
+				</li>
+				<li class="how-to-adopt__step">
+					<div class="how-to-adopt__step-card how-to-adopt__step-card--3">
+						<div class="how-to-adopt__step-number"></div>
+						<p>Забрать питомца</p>
+					</div>
+					<div class="how-to-adopt__content">
+						<p>Ваша анкета одобрена, и вы можете забрать своего избранника. Убедитесь, что вы полностью готовы к тому, что прямо сегодня ваша
+							семья станет больше на одного члена.</p>
+						<p>Как происходит передача животного:</p>
+						<ol>
+							<li>В назначенный день мы встречаемся и заполняем двусторонний договор
+								о передаче.</li>
+							<li>
+								При себе необходимо иметь паспорт и переноску (лучше пластиковую
+								с надежными защелками)
+								</li>
+							<li>Пожалуйста, учитывайте, что без переноски мы животных не отдаем!</li>
+						</ol>
+					</div>	
+				</li>
+			</ul>
+			
+		</section>
       <section class="hero">
         <div class=" hero__img-cont hero__img-cont--left">
           <img  alt="собака" class="hero__img hero__img--dog" src="src/assets/imgs/hero-bg--dog.png">
@@ -378,4 +422,17 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
- -->
+
+<!-- <!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/icons/logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Приют</title>
+  </head>
+  <body class="container">
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html> -->
