style(contacts): страница контактов + стили
feat(placeholder): тоображение плейсхолдеров в случае потери доступа к изображению
refactor: перенес верстку в реакт компоненты

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 								<p>Шприцы 2мл, 5мл, 10мл, 20 мл, 1мл, инсулиновые</p>
 							</div>
 						</li>
-						<li class="shelter-needs__card" loading="lazy">
+						<li class="shelter-needs__card">
 							<img src="src/assets/imgs/toys.png" alt="Игрушки для животных">
 							<div class="shelter-needs__card-content">
 								<h3>Игрушки для животных</h3>
@@ -239,6 +239,43 @@
 			</ul>
 			
 		</section>
+
+		<section class="contacts wrap">
+			<h2 class="title-h1">
+				Наши <span class="pink">контакты</span>
+			</h2>
+			<ul class="contacts__info">
+				<li class="contacts__item">
+					<span class="contacts__label">Телефон</span>
+					<span class="contacts__value">+7 (927) 009 36 40</span>
+				</li>
+				<li class="contacts__item">
+					<span class="contacts__label">Почта</span>
+					<span class="contacts__value">m-drug63@yandex.u</span>
+				</li>
+				<li class="contacts__item">
+					<span class="contacts__label">Город</span>
+					<span class="contacts__value">
+						196247, Россия, Екатеринбург, ул. <br> Автовская, д. 31
+					</span>
+				</li>
+				<li class="contacts__item">
+					<span class="contacts__label">Наши соцсети</span>
+					<div class="contacts__socials">
+						<a href="#" class="contacts__social-link">
+						<img src="src/assets/icons/vk-icon.svg" alt="ВКонтакте" />
+						</a>
+						<a href="#" class="contacts__social-link">
+						<img src="src/assets/icons/tg-icon.svg" alt="Telegram" />
+						</a>
+						<a href="#" class="contacts__social-link">
+						<img src="src/assets/icons/insta-icon.svg" alt="Instagram" />
+						</a>
+					</div>
+				</li>
+			</ul>		  
+		</section>
+
       <section class="hero">
         <div class=" hero__img-cont hero__img-cont--left">
           <img  alt="собака" class="hero__img hero__img--dog" src="src/assets/imgs/hero-bg--dog.png">
