--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
- 
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/icons/logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Приют</title>
+  </head>
+  <body class="container">
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
 
-
-
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -597,20 +607,6 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
-
-<!-- <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/icons/logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Приют</title>
-  </head>
-  <body class="container">
-    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html> -->
