--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+	<script src="https://vk.com/js/api/openapi.js?169" type="text/javascript"></script>
     <link rel="icon" type="image/svg+xml" href="src/assets/icons/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Приют</title>
